--- a/2022ui_autotest/web/pytest.ini
+++ b/2022ui_autotest/web/pytest.ini
@@ -1,7 +1,11 @@
 [pytest]
 
+addopts = --alluredir=.allure_results --clean-alluredir
+
 log_cli = 0
 log_file = ./logs/test.log
 log_file_level = info
 log_file_format = %(levelname)-8s %(actime)s [%(name)s:%(lineno)s] : %(message)s
 log_file_ate_format = %Y-%m-%d %H:%M:%S
+
+;addopts = -p no:warnings
