--- a/2022ui_autotest/web/pytest.ini
+++ b/2022ui_autotest/web/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
-addopts = --alluredir=.allure_results --clean-alluredir
+addopts = --alluredir=./allure_results --clean-alluredir
 
 log_cli = 0
 log_file = ./logs/test.log
